# Atom

./: .gitignore  .gitmodules  README.md
e2e/: README.md
e2e/punica-atom/: README.md  requirements.txt  setup.py
e2e/punica-atom/benchmarks/: bench_textgen.py
e2e/punica-atom/punica/models/: llama.py
e2e/punica-atom/punica/ops/: __init__.py
e2e/punica-atom/punica/ops/csrc/: punica_ops.cc
e2e/punica-atom/punica/ops/csrc/Activate/: Activate.cu  Activate.h  Makefile  test_activate.cu
e2e/punica-atom/punica/ops/csrc/GEMM/: DenseLayerGEMM_i4.cu  DenseLayerGEMM_i4.h  DenseLayerGEMM_i4_o4.cu  DenseLayerGEMM_i4_o4.h  Makefile
e2e/punica-atom/punica/ops/csrc/Norm/: Makefile  RMSNorm.cu  RMSNorm.h  test_RMSNorm.cu
e2e/punica-atom/punica/ops/csrc/Reorder/: Makefile  Reorder.cu  Reorder.h  test_Reorder.cu
e2e/punica-atom/punica/ops/csrc/flashinfer/: decode.cuh  page.cuh  quantization.cuh
e2e/punica-atom/punica/ops/csrc/flashinfer_adapter/: flashinfer_all.cu  flashinfer_config.h  flashinfer_impl.cuh
e2e/punica-atom/punica/utils/: __init__.py  kvcache.py
e2e/punica-atom/tests/: test_batch_decode_int4.py  test_int4.py
e2e/punica-awq/: README.md  requirements.txt  setup.py
e2e/punica-awq/benchmarks/: bench_textgen.py
e2e/punica-awq/punica/models/: llama.py
e2e/punica-awq/punica/ops/csrc/: punica_ops.cc
e2e/punica-awq/punica/ops/csrc/gemm/: gemm_cuda_gen.cu
e2e/punica-fp16/: README.md
e2e/punica-fp16/punica/models/: llama.py
e2e/punica-int8/: README.md  setup.py
e2e/punica-int8/benchmarks/: bench_textgen.py
e2e/punica-int8/punica/models/: llama.py
e2e/punica-int8/punica/ops/: __init__.py
e2e/punica-int8/punica/ops/csrc/: punica_ops.cc
e2e/punica-int8/punica/ops/csrc/flashinfer/: vec_dtypes.cuh
e2e/punica-int8/punica/ops/csrc/flashinfer_adapter/: flashinfer_all.cu
e2e/punica-int8/punica/ops/csrc/gemm/: gemm_cuda.h  gemv_cuda.cu
e2e/punica-int8/tests/: test_batch_decode.py  test_int8.py  test_w4.py
kernels/: CMakeLists.txt
kernels/baselines/: CMakeLists.txt  README.md  build.sh  python-api.ipynb
kernels/baselines/src/: bench_awq.cu  bench_torch_int.cu
kernels/include/Activate/: Activate.cuh
kernels/include/GEMM/: Dense_layer_gemm_i4_o16.cuh
kernels/include/RMSNorm/: RMSNorm.cuh
kernels/include/Reorder/: Reorder.cuh
kernels/include/flashinfer/: cp_async.cuh  vec_dtypes.cuh
kernels/src/Activate/: bench_activate.cu
kernels/src/GEMM/: bench_dense_layer_gemm_i4_o16.cu
kernels/src/RMSNorm/: bench_rmsnorm.cu
kernels/src/Reorder/: bench_reorder.cu
kernels/src/flashinfer/: bench_batch_decode.cu  cpu_reference.h  utils.h
model/: LMClass.py  datautils.py  eval.py  gptq.py  llama.py  main.py  modelutils.py  modelutils_llama.py  modelutils_mixtral.py  modelutils_opt.py  outlier.py  parallel_utils.py  qFalconLayer.py  qLinearLayer.py  qLlamaLayer.py  qMixtralLayer.py  qOPTLayer.py  qSVDLinearLayer.py  quant.py  requirements.txt
model/svd_llama/: __init__.py  configuration_asvd_llama.py  modelling_asvd_llama.py
scripts/: run_atom_ablation.sh  run_atom_ppl.sh  run_atom_zeroshot_acc.sh
